1999-12-30  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/disk_io.c (grub_seek): New function.
	* stage2/shared.h (grub_seek): Declared.
	* stage2/boot.c (load_image): Use grub_seek instead of setting
	FILEPOS to a new value directly.
	* stage2/builtins.c (install_func): Likewise.
	(testload_func): Likewise.

	* docs/grub.texi: Use a single direntry command for all the
	entries instead of one per entry.
	
1999-12-29  OKUJI Yoshinori  <okuji@gnu.org>

	* grub/asmstub.c (check_device) [__linux__]: Check if DEVICE is
	a CD-ROM drive by the HDIO_GETGEO ioctl. If so, then return
	zero. Reported by Pavel Roskin.

	* stage2/Makefile.am (nodist_noinst_DATA): Renamed to ...
	(noinst_DATA): ... this. The primary DATA is `nodist' by
	default, at least theoretically. Reported by Klaus Reichl.

	* stage2/bios.c (get_diskinfo): Set the LBA flag in GEOMETRY
	only if bit 0 in DRP.FLAGS is set. Reported by Zack Weinberg
	<zack@rabi.columbia.edu>.

	From Pavel Roskin:
	* grub/asmstub.c (init_device_map): Increase the number of
	devices to be probed to 8 for IDE disks and 16 for SCSI
	disks. Reported by Anton Anisimov <aa@bestlinux.net>.
	
1999-12-06  Gordon Matzigkeit  <gord@fig.org>

	* README (DEVELOPERS): Change CVS location to subversions.

1999-11-30  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/disk_io.c (real_open_partition): If SLICE_NO is greater
	than or equal to PC_SLICE_MAX, skip any extended partition, when
	searching for the right partition. Reported by Weil, Stefan 3732
	EPE-24 <Stefan.Weil@de.heidelberg.com>.

1999-11-19  Gordon Matzigkeit  <gord@fig.org>

	* grub/asmstub.c (getkey): Stop immediately if we get an EOF.

	* stage2/stage2.c (cmain): Tell enter_cmdline to run forever.
	(run_menu): Tell print_cmdline_message and enter_cmdline that we
	won't run forever.
	* stage2/cmdline.c (enter_cmdline): New argument, FOREVER, for
	when ESC shouldn't allow an exit.  Pass it to
	print_cmdline_message.